--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
     "dev": "nodemon dist/index.cjs"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "msnodesqlv8": "^2.6.0",
     "mssql": "^9.0.1"
